--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
                     "--data_dir","./speaker_classifier_data", 
                     "--model_path","./saved_models/speaker_classifier.test.pt", 
                     "--n_epochs","10", "--lr","10e-3", "--momentum","0.7","--num_workers","1","--train_device","cpu", 
-                    "--input_size","128","--hidden_size","256","--num_layers","1","--num_classes","2","--dropout","0.5"
+                    "--input_size","128","--hidden_size","256","--num_layers","1","--num_classes","2","--dropout","0.5",
+                    "--embedding_size=128"
 
             ]
         }
